--- a/src/express/templates/new-post.pug
+++ b/src/express/templates/new-post.pug
@@ -49,3 +49,4 @@ block content
                 .form__field.form__field--publication-text
                   label
                     textarea(rows='10' name='full-text' placeholder='Полный текст публикации')
+              input(type="hidden" name="_csrf" value=csrfToken)
