--- a/src/express/templates/post.pug
+++ b/src/express/templates/post.pug
@@ -51,6 +51,7 @@ block content
                   img(src='/img/avatar-2.png' alt='аватар пользователя')
                 label
                   textarea(rows='1' name='text' placeholder='Присоединиться к обсуждению')
+                input(type="hidden" name="_csrf" value=csrfToken)
                 button.comments__button.button.button--colored(type='submit') Опубликовать
               if validationErrors
                 each error in validationErrors
